--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="light_purple">#9966FF</color>
     <color name="primary_green">#58CC02</color>
+    <color name="primary_orange">#ffa338</color>
+    <color name="beige">#f2efeb</color>
     <color name="green_500">#58CC02</color>
     <color name="green_700">#02CC3F</color>
     <color name="red_500">#FF0000</color>
@@ -45,8 +47,13 @@
     <color name="border_color_light">#9E9E9E</color>
     <color name="gray_text">#757575</color>
     <color name="gray_dark">#212121</color>
-    <color name="disabled_gray">#D3D3D3</color> <color name="progress_bar_background">#f2efeb</color>
+    <color name="black_gray">#1d1d1b</color>
+    <color name="disabled_gray">#D3D3D3</color>
+    <color name="progress_bar_background">#f2efeb</color>
     <color name="progress_bar_progress">#735cdd</color>
+
+    <color name="selected_text_gray">#545454</color>
+    <color name="chip_orange">#FFA64D</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
