--- a/app/src/main/res/animator/card_flip_left_in.xml
+++ b/app/src/main/res/animator/card_flip_left_in.xml
@@ -5,12 +5,24 @@
         android:valueTo="0"
         android:propertyName="rotationY"
         android:interpolator="@android:interpolator/accelerate_decelerate"
-        android:duration="250" />
+        android:duration="300" />
 
     <objectAnimator
         android:valueFrom="0.0"
         android:valueTo="1.0"
         android:propertyName="alpha"
-        android:startOffset="100"
-        android:duration="150" />
+        android:startOffset="120"
+        android:duration="180" />
+    <objectAnimator
+        android:valueFrom="0.96"
+        android:valueTo="1.0"
+        android:propertyName="scaleX"
+        android:startOffset="150"
+        android:duration="180" />
+    <objectAnimator
+        android:valueFrom="0.96"
+        android:valueTo="1.0"
+        android:propertyName="scaleY"
+        android:startOffset="150"
+        android:duration="180" />
 </set>
