--- a/app/src/main/res/layout/fragment_connect_game.xml
+++ b/app/src/main/res/layout/fragment_connect_game.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_bold"
-        android:text="@string/connect_game_title_detailed"
+        android:text="@string/combine_pairs_title"
         android:textColor="@color/black"
         android:textSize="22sp" />
 <!---->
@@ -26,14 +26,26 @@
         android:textSize="16sp"
         tools:text="Pares combinados 0/4" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/connectGrid"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="4"
-        tools:listitem="@layout/item_memory_card"/>
+        android:orientation="horizontal">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/leftColumn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:listitem="@layout/item_connect_card"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rightColumn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:listitem="@layout/item_connect_card"/>
+    </LinearLayout>
 
 </LinearLayout>
